[project]
name = "bsew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
#    "bspil-basico",
    "process-bigraph>=0.0.45",
]

#[tool.uv.sources]
#bspil-basico = { git = "https://github.com/biosimulators/bspil-basico.git", rev = "initial_work" }
